@@ -9,6 +9,10 @@ Changes from 1.4 to 1.4.1
 - Mingw32 can also work with pthreads compatibility code for win32.
   Fixes #31.
 
+- The GIL (Global Interpreter Lock) is released during computations.
+  This should allow for better resource usage for multithreaded apps.
+  Fixes #35.
+
 
 Changes from 1.3.1 to 1.4
 =========================
